--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" href="/favicon.ico" />
+		<link
+			rel="preload"
+			href="MabryPro-Medium.woff2"
+			as="font"
+			type="font/woff2"
+			crossorigin
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Music Player</title>
 	</head>
