#4 Add search feature, play/pause/resume sample track

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" href="/favicon.ico" />
+		<link
+			rel="icon"
+			href="/favicon.ico"
+		/>
 		<link
 			rel="preload"
 			href="MabryPro-Medium.woff2"
@@ -10,11 +13,17 @@
 			type="font/woff2"
 			crossorigin
 		/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Music Player</title>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<title>dizastapiece</title>
 	</head>
 	<body>
 		<div id="app"></div>
-		<script type="module" src="/src/main.js"></script>
+		<script
+			type="module"
+			src="/src/main.js"
+		></script>
 	</body>
 </html>
